--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  margin-left: 25px;
 }
 
 /* HEADER-CONTENT */
@@ -142,6 +143,9 @@ button {
   display: flex;
   flex-direction: column;
   width: 60%;
+  background-color: #eeeeee;
+  border-radius: 10px;
+  padding-bottom: 15px;
 }
 
 .card-flex {
@@ -166,18 +170,52 @@ h4,
   color: #ff8139;
 }
 
-.footer-img {
+.launching-content-2 img {
   position: relative;
-  bottom: 40px;
-  left: 30px;
-  width: 30%;
+  bottom: 300px;
+  left: 160px;
+  width: 80%;
 }
 
 .flex-two {
-  margin-top: 300px;
+  margin-top: 100px;
   width: 50%;
+  height: 55vh;
 }
 
 .footer-h1 {
-  font-size: 3rem;
+  font-size: 2.5rem;
+  line-height: 3rem;
+}
+
+.footer-p {
+  width: 75%;
+}
+
+footer {
+  padding: 20px;
+}
+
+.font-awesome {
+  color: #999999;
+  letter-spacing: 5px;
+}
+
+li {
+  padding: 5px;
+  list-style-type: none;
+}
+
+ul {
+  padding: 0px;
+}
+
+.footer-flex-item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 30px;
+  width: 60%;
+  gap: 3rem;
+  color: #5c5c5c;
 }
