change dekstop card css property

--- a/style.css
+++ b/style.css
@@ -314,6 +314,11 @@ footer {
     margin-bottom: 50px;
   }
 
+  .card {
+    max-width: 100%;
+    overflow: visible;
+  }
+
   .card-container {
     width: 100%;
   }
